[gd_scene load_steps=48 format=3 uid="uid://wx775h6gysli"]

[ext_resource type="Script" path="res://link.gd" id="1_h4jya"]
[ext_resource type="Texture2D" uid="uid://bcax86bfiwoo4" path="res://RECURSO DE VIDEO E IMAGENES/Sprites/Link1.png" id="4_dsthb"]
[ext_resource type="Texture2D" uid="uid://dti2wldnuhc5j" path="res://Sprites/Link_Misc.png" id="4_lh425"]
[ext_resource type="Texture2D" uid="uid://bguyexyuq0yiw" path="res://elegirBando/letreros&Espada/pixil-frame-0 (7).png" id="4_oy5kl"]
[ext_resource type="Texture2D" uid="uid://bcax86bfiwoo4" path="res://Sprites/Link1.png" id="4_w3b4u"]
[ext_resource type="Texture2D" uid="uid://dyak0qhdkywha" path="res://RECURSO DE VIDEO E IMAGENES/Hearts/PNG/basic/border.png" id="5_us2vr"]
[ext_resource type="Texture2D" uid="uid://iej57ptmx0dl" path="res://RECURSO DE VIDEO E IMAGENES/Hearts/PNG/basic/heart.png" id="6_67npl"]
[ext_resource type="Texture2D" uid="uid://dhrqqh8n8qbp8" path="res://RECURSO DE VIDEO E IMAGENES/Kyrise's 16x16 RPG Icon Pack - V1.3/icons/16x16/shard_01e.png" id="8_52rgn"]
[ext_resource type="Texture2D" uid="uid://os1yvhlhygke" path="res://RECURSO DE VIDEO E IMAGENES/Kyrise's 16x16 RPG Icon Pack - V1.3/icons/16x16/shard_01d.png" id="9_78myw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e61s5"]
atlas = ExtResource("4_w3b4u")
region = Rect2(240, 92, 30, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_56t3i"]
atlas = ExtResource("4_w3b4u")
region = Rect2(270, 92, 30, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_wojx2"]
atlas = ExtResource("4_w3b4u")
region = Rect2(300, 92, 30, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwame"]
atlas = ExtResource("4_w3b4u")
region = Rect2(330, 92, 30, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_4re8g"]
atlas = ExtResource("4_w3b4u")
region = Rect2(360, 92, 30, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_3reu1"]
atlas = ExtResource("4_lh425")
region = Rect2(120, 210, 24, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxxcx"]
atlas = ExtResource("4_w3b4u")
region = Rect2(29, 0, 21, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd46n"]
atlas = ExtResource("4_w3b4u")
region = Rect2(145, 0, 29, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2sqe"]
atlas = ExtResource("4_w3b4u")
region = Rect2(58, 0, 29, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_apedt"]
atlas = ExtResource("4_lh425")
region = Rect2(87, 210, 29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f64s"]
atlas = ExtResource("4_lh425")
region = Rect2(29, 270, 29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i8lf"]
atlas = ExtResource("4_lh425")
region = Rect2(87, 270, 29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywaip"]
atlas = ExtResource("4_lh425")
region = Rect2(58, 0, 29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1rav"]
atlas = ExtResource("4_lh425")
region = Rect2(0, 0, 29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvobb"]
atlas = ExtResource("4_lh425")
region = Rect2(87, 210, 29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v1lo"]
atlas = ExtResource("4_w3b4u")
region = Rect2(120, 32, 21, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_t233j"]
atlas = ExtResource("4_w3b4u")
region = Rect2(30, 32, 21, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_oun7y"]
atlas = ExtResource("4_w3b4u")
region = Rect2(2, 31, 18, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwdbs"]
atlas = ExtResource("4_w3b4u")
region = Rect2(88, 30, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwmcl"]
atlas = ExtResource("4_w3b4u")
region = Rect2(90, 31, 20, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kdi0"]
atlas = ExtResource("4_w3b4u")
region = Rect2(239, 25, 21, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_la0do"]
atlas = ExtResource("4_w3b4u")
region = Rect2(270, 30, 21, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b7p3"]
atlas = ExtResource("4_w3b4u")
region = Rect2(300, 28, 21, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtnlc"]
atlas = ExtResource("4_w3b4u")
region = Rect2(330, 30, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxeir"]
atlas = ExtResource("4_w3b4u")
region = Rect2(361, 30, 21, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf87s"]
atlas = ExtResource("4_lh425")
region = Rect2(0, 120, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_goyuv"]
atlas = ExtResource("4_lh425")
region = Rect2(26, 120, 26, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3avpm"]
atlas = ExtResource("4_lh425")
region = Rect2(60, 120, 20, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkxkb"]
atlas = ExtResource("4_lh425")
region = Rect2(88, 120, 22, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0ttn"]
atlas = ExtResource("4_lh425")
region = Rect2(120, 120, 24, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4ay1"]
atlas = ExtResource("4_dsthb")
region = Rect2(29, 150, 29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0la4"]
atlas = ExtResource("4_dsthb")
region = Rect2(58, 150, 29, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fus4l"]
atlas = ExtResource("4_w3b4u")
region = Rect2(180, 63, 20, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_43j8h"]
atlas = ExtResource("4_lh425")
region = Rect2(299, 222, 23, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2fhu"]
atlas = ExtResource("4_lh425")
region = Rect2(92, 84, 23, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ymns"]
atlas = ExtResource("4_oy5kl")
region = Rect2(40, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_o2v6d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e61s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_56t3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wojx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwame")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4re8g")
}],
"loop": true,
"name": &"Attack_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3reu1")
}],
"loop": true,
"name": &"CAIDA",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxxcx")
}],
"loop": true,
"name": &"Idle_Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd46n")
}],
"loop": true,
"name": &"Idle_Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2sqe")
}],
"loop": true,
"name": &"Idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apedt")
}],
"loop": true,
"name": &"MUERTEDEFINITIVA",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f64s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i8lf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywaip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1rav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvobb")
}],
"loop": true,
"name": &"MUERTO",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v1lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t233j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oun7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwdbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwmcl")
}],
"loop": true,
"name": &"WalkDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kdi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la0do")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b7p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtnlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxeir")
}],
"loop": true,
"name": &"WalkRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf87s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_goyuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3avpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkxkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0ttn")
}],
"loop": true,
"name": &"WalkUp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4ay1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0la4")
}],
"loop": true,
"name": &"disparoflecha",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fus4l")
}],
"loop": true,
"name": &"obtenciongema",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43j8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2fhu")
}],
"loop": true,
"name": &"pesca",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2fhu")
}],
"loop": true,
"name": &"standpesca",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ymns")
}],
"loop": true,
"name": &"sword",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7hppb"]
radius = 6.0
height = 18.0

[node name="Jugador" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_h4jya")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_o2v6d")
animation = &"disparoflecha"
autoplay = "WalkDown"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_7hppb")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = -28.0
offset_top = -31.0
offset_right = 37.0
offset_bottom = -10.0

[node name="coracointainer" type="Sprite2D" parent="RichTextLabel"]
visible = false
position = Vector2(4, 7)
scale = Vector2(0.323529, 0.308824)
texture = ExtResource("5_us2vr")

[node name="cora1" type="Sprite2D" parent="RichTextLabel/coracointainer"]
texture = ExtResource("6_67npl")

[node name="coracointainer2" type="Sprite2D" parent="RichTextLabel"]
visible = false
position = Vector2(10, 7)
scale = Vector2(0.323529, 0.308824)
texture = ExtResource("5_us2vr")

[node name="cora2" type="Sprite2D" parent="RichTextLabel/coracointainer2"]
texture = ExtResource("6_67npl")

[node name="coracointainer3" type="Sprite2D" parent="RichTextLabel"]
visible = false
position = Vector2(16, 7)
scale = Vector2(0.323529, 0.308824)
texture = ExtResource("5_us2vr")

[node name="cora3" type="Sprite2D" parent="RichTextLabel/coracointainer3"]
texture = ExtResource("6_67npl")

[node name="coracointainer4" type="Sprite2D" parent="RichTextLabel"]
visible = false
position = Vector2(22, 7)
scale = Vector2(0.323529, 0.308824)
texture = ExtResource("5_us2vr")

[node name="cora4" type="Sprite2D" parent="RichTextLabel/coracointainer4"]
texture = ExtResource("6_67npl")

[node name="coracointainer5" type="Sprite2D" parent="RichTextLabel"]
visible = false
position = Vector2(28, 7)
scale = Vector2(0.323529, 0.308824)
texture = ExtResource("5_us2vr")

[node name="cora5" type="Sprite2D" parent="RichTextLabel/coracointainer5"]
texture = ExtResource("6_67npl")

[node name="coracointainer6" type="Sprite2D" parent="RichTextLabel"]
visible = false
position = Vector2(34, 7)
scale = Vector2(0.323529, 0.308824)
texture = ExtResource("5_us2vr")

[node name="cora6" type="Sprite2D" parent="RichTextLabel/coracointainer6"]
texture = ExtResource("6_67npl")

[node name="coracointainer7" type="Sprite2D" parent="RichTextLabel"]
visible = false
position = Vector2(40, 7)
scale = Vector2(0.323529, 0.308824)
texture = ExtResource("5_us2vr")

[node name="cora7" type="Sprite2D" parent="RichTextLabel/coracointainer7"]
texture = ExtResource("6_67npl")

[node name="LOGORACIONALISTA" type="Sprite2D" parent="RichTextLabel"]
visible = false
position = Vector2(53, 10)
texture = ExtResource("8_52rgn")

[node name="LOGOEMPIRISTA" type="Sprite2D" parent="RichTextLabel"]
visible = false
position = Vector2(53, 10)
texture = ExtResource("9_78myw")

[node name="LOGORACIONALISTA" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(0.5, -16)
scale = Vector2(1.0625, 1)
texture = ExtResource("8_52rgn")

[node name="LOGOEMPIRISTA" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(1, -16)
scale = Vector2(1.0625, 1)
texture = ExtResource("9_78myw")

[node name="Sprite2D" type="Sprite2D" parent="."]
